--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,18 @@
-<table class="table">
+<div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+</div>
+
+<table  *ngIf="dataLoaded==true" class="table table-striped">
+    <thead>
+        <tr>
+          <th>Product Id</th>
+          <th>Product Name</th>
+          <th>Categories</th>
+          <th>Price</th>
+          <th>Units in Stock</th>
+          <th></th>
+        </tr>
+      </thead>
     <tr *ngFor="let product of products">
         <td>{{product.productId}}</td>
         <td>{{product.productName}}</td>
