--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,22 +2,38 @@
     <span class="visually-hidden">Loading...</span>
 </div>
 
-<table  *ngIf="dataLoaded==true" class="table table-striped">
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Search Product</label>
+  <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" 
+  placeholder="Enter a word">
+</div>
+
+<div *ngIf="filterText.length>2" class="alert alert-success">
+  {{filterText}} is searched
+</div>
+
+<table *ngIf="dataLoaded==true" class="table table-striped">
     <thead>
         <tr>
           <th>Product Id</th>
           <th>Product Name</th>
-          <th>Categories</th>
+          <th>Category Id</th>
           <th>Price</th>
+          <th>Vat Added Price</th>
           <th>Units in Stock</th>
           <th></th>
         </tr>
       </thead>
-    <tr *ngFor="let product of products">
-        <td>{{product.productId}}</td>
-        <td>{{product.productName}}</td>
-        <td>{{product.categoryId}}</td>
-        <td>{{product.unitPrice}}</td>
-        <td>{{product.unitsInStock}}</td>
-    </tr>
+      <tbody>
+        <tr *ngFor="let product of products | filterPipe:filterText">
+          <td>{{product.productId}}</td>
+          <td>{{product.productName}}</td>
+          <td>{{product.categoryId}}</td>
+          <td>{{product.unitPrice | currency}}</td>
+          <td>{{product.unitPrice | vatAdded:10 | currency}}</td>
+          <td>{{product.unitsInStock}}</td>
+          <td><button (click)="addToCart(product)" type="button" class="btn btn-success btn-xs">Add to Cart</button></td>
+        </tr>
+      </tbody>
+    
 </table>
